test/expected/fail-throws.js.stderr.txt

<FILE_PATH>/fail-throws.js:7
throw new Error('This is an unhandled error');
      ^
Error: This is an unhandled error
    at Object.<anonymous> (<FILE_PATH>/fail-throws.js:<LINE:COL>)
    at Module._compile (module.js:<LINE:COL>)
    at Object.Module._extensions..js (module.js:<LINE:COL>)
    at Module.load (module.js:<LINE:COL>)
    at Function.Module._load (module.js:<LINE:COL>)
    at Function.Module.runMain (module.js:<LINE:COL>)
    at startup (node.js:<LINE:COL>)
    at node.js:<LINE:COL>

